# fastapi_template

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.migration.dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
src/app/: config.py
src/app/adapters/sqlalchemy_db/: gateway.py  models.py  provider.py
src/app/adapters/sqlalchemy_db/migrations/: env.py
src/app/adapters/sqlalchemy_db/migrations/versions/: 2024-06-06_1d3b825fc015_init.py
src/app/api/: users.py
src/app/application/: users.py
src/app/application/common/: repository.py
src/app/application/protocols/: database.py
src/app/main/: di.py  routers.py
src/app/presentation/api/: index.py  schemas.py  users.py
tests/: conftest.py
tests/e2e/: test_root.py
tests/unit/: test_user.py
