[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"

description = "FastApi template"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.111.*",
    "uvicorn==0.29.*",
    "dishka==1.2.*",
    "SQLAlchemy==2.*",
    "alembic==1.11.*",
    "asyncpg",
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest_asyncio",
    "async_timeout",
]
lint = [
    "mypy",
    "ruff",
    "black",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    'entity: tests related to entity context.',
    'domain: domain tests',
    'application: application tests',
]
#filterwarnings = "ignore::DeprecationWarning"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false

[project.urls]
"Homepage" = "https://github.com/honeymoond24/fastapi-template"
"Bug Tracker" = "https://github.com/honeymoond24/fastapi-template"
